# double-ratchet-rust

./: Cargo.toml
src/: common.rs  dr.rs  lib.rs  msg_key_cache.rs
src/async_/: dr.rs  mod.rs  msg_key_cache.rs
src/sync/: dr.rs  mod.rs  msg_key_cache.rs
tests/: signal.rs  signal_async.rs
