[package]
name = "double-ratchet"
version = "0.1.0"
authors = ["S.R. Verschoor <sebastian@zeroknowledge.me>"]
edition = "2018"
description = "Double Ratchet key management for exchanging encrypted messages between two parties."
repository = "https://github.com/sebastianv89/double-ratchet"
readme = "README.md"
keywords = ["double-ratchet", "forward-secrecy", "future-secrecy"]
categories = ["cryptography", "no-std"]
license = "BSD-3-Clause"

[badges]
travis-ci = {repository = "sebastianv89/double-ratchet"}

[dependencies]
rand_core = "0.6.4"
hashbrown = "0.13.2"



[dev-dependencies]
clear_on_drop = "0.2"
generic-array = "0.14.7"
hkdf = "0.10.0"
hmac = "0.10.1"
sha2 = "0.9.9"
subtle = "2"
noah-x25519-dalek = "4.0.0"
chacha20poly1305 = "0.10.1"

[features]
default = ["std", "test"]
std = []
# Allow doctests with mock objects
# See: https://github.com/rust-lang/rust/issues/45599
test = []


