[package]
name = "double-ratchet"
version = "0.1.0"
authors = ["S.R. Verschoor <sebastian@zeroknowledge.me>"]
edition = "2018"
description = "Double Ratchet key management for exchanging encrypted messages between two parties."
repository = "https://github.com/sebastianv89/double-ratchet"
readme = "README.md"
keywords = ["double-ratchet", "forward-secrecy", "future-secrecy"]
categories = ["cryptography", "no-std"]
license = "BSD-3-Clause"

[badges]
travis-ci = {repository = "sebastianv89/double-ratchet"}

[dependencies]
rand_core = "^0.6.4"
hashbrown = "^0.15.0"
serde = { version = "^1.0.219", features = ["derive", "serde_derive"], optional = true  }
serde_json = { version = "^1.0.140", optional = true }


[dev-dependencies]
clear_on_drop = "0.2"
hkdf = "0.12.4"
hmac = "0.12.1"
sha2 = "0.10.9"
subtle = "2"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"]}
chacha20poly1305 = "0.10.1"
aes = {version = "0.8.4", features = ["zeroize"] }
cipher = { version = "0.4.4", features = ["block-padding", "zeroize"] }
cbc = { version = "0.1.2", features = ["alloc", "zeroize"] }

[features]
default = ["std", "serde", "test"]
std = []
serde = ["dep:serde", "dep:serde_json"]
# Allow doctests with mock objects
# See: https://github.com/rust-lang/rust/issues/45599
test = []


